SAR Blai Sandbox/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Apellidos_Familiar__c</fullName>
        <label>Apellidos Familiar</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apellidos_Solicitante__c</fullName>
        <label>Apellidos Solicitante</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apellidos_Usuario__c</fullName>
        <label>Apellidos Usuario</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle__c</fullName>
        <label>Calle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo__c</fullName>
        <label>Cargo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categoria_Profesional__c</fullName>
        <label>Categoría Profesional</label>
        <picklist>
            <picklistValues>
                <fullName>Directivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enfermero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jefes de Servicio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandos Intermedios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Médico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profesionales -por cuenta ajena-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propietario Negocio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Técnico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trabajador Social</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Centro_SARquavitae__c</fullName>
        <label>Centro SARquavitae</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Centro_Trabajo__c</fullName>
        <label>Centro Trabajo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad__c</fullName>
        <label>Ciudad</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_Postal__c</fullName>
        <label>Código Postal</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comunidad_Autonoma__c</fullName>
        <formula>CASE( Provincia__c , 
&apos;A Coruña&apos;,&apos;Galicia&apos;, 
&apos;Álava&apos;,&apos;País Vasco&apos;, 
&apos;Albacete&apos;,&apos;Castilla - la Mancha&apos;, 
&apos;Alacant&apos;,&apos;Com. Valenciana&apos;, 
&apos;Almería&apos;,&apos;Andalucía&apos;, 
&apos;Asturias&apos;,&apos;Asturias&apos;, 
&apos;Ávila&apos;,&apos;Castilla y León&apos;, 
&apos;Badajoz&apos;,&apos;Extremadura&apos;, 
&apos;Barcelona&apos;,&apos;Catalunya&apos;, 
&apos;Burgos&apos;,&apos;Castilla y León&apos;, 
&apos;Zamora&apos;,&apos;Castilla y León&apos;, 
&apos;Cáceres&apos;,&apos;Extremadura&apos;, 
&apos;Cádiz&apos;,&apos;Andalucía&apos;, 
&apos;Cantabria&apos;,&apos;Cantabria&apos;, 
&apos;Castelló&apos;,&apos;Com. Valenciana&apos;, 
&apos;Ceuta&apos;,&apos;Ceuta&apos;, 
&apos;Ciudad Real&apos;,&apos;Castilla - la Mancha&apos;, 
&apos;Córdoba&apos;,&apos;Andalucía&apos;, 
&apos;Cuenca&apos;,&apos;Castilla - la Mancha&apos;, 
&apos;Gipuzkoa&apos;,&apos;País Vasco&apos;, 
&apos;Girona&apos;,&apos;Catalunya&apos;, 
&apos;Granada&apos;,&apos;Andalucía&apos;, 
&apos;Guadalajara&apos;,&apos;Castilla - la Mancha&apos;, 
&apos;Huelva&apos;,&apos;Andalucía&apos;, 
&apos;Huesca&apos;,&apos;Aragón&apos;, 
&apos;Illes Balears&apos;,&apos;Illes Barears&apos;, 
&apos;Jaén&apos;,&apos;Málaga&apos;, 
&apos;La Rioja&apos;,&apos;La Rioja&apos;, 
&apos;Las Palmas&apos;,&apos;Islas Canarias&apos;, 
&apos;León&apos;,&apos;Castilla y León&apos;, 
&apos;Lleida&apos;,&apos;Catalunya&apos;, 
&apos;Lugo&apos;,&apos;Galicia&apos;, 
&apos;Madrid&apos;,&apos;Madrid&apos;, 
&apos;Málaga&apos;,&apos;Andalucía&apos;, 
&apos;Melilla&apos;,&apos;Melilla&apos;, 
&apos;Murcia&apos;,&apos;Murcia&apos;, 
&apos;Navarra&apos;,&apos;Navarra&apos;, 
&apos;Ourense&apos;,&apos;Galicia&apos;, 
&apos;Palencia&apos;,&apos;Castilla y León&apos;, 
&apos;Pontevedra&apos;,&apos;Galicia&apos;, 
&apos;Salamanca&apos;,&apos;Castilla y León&apos;, 
&apos;Santa Cruz de Tenerife&apos;,&apos;Islas Canarias&apos;, 
&apos;Segovia&apos;,&apos;Castilla y León&apos;, 
&apos;Sevilla&apos;,&apos;Andalucía&apos;, 
&apos;Soria&apos;,&apos;Castilla y León&apos;, 
&apos;Tarragona&apos;,&apos;Catalunya&apos;, 
&apos;Teruel&apos;,&apos;Aragón&apos;, 
&apos;Toledo&apos;,&apos;Castilla - la Mancha&apos;, 
&apos;Valencia&apos;,&apos;Com. Valenciana&apos;, 
&apos;Valladolid&apos;,&apos;Castilla y León&apos;, 
&apos;Bizkaia&apos;,&apos;País Vasco&apos;, 
&apos;Zaragoza&apos;,&apos;Aragón&apos;, 
&apos;&apos;,&apos;&apos;, 
&apos;No encontrado&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comunidad Autónoma</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concepto__c</fullName>
        <label>Concepto</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correo_electronico_secundaria__c</fullName>
        <label>Correo electrónico secundaria</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cuenta_Bancaria__c</fullName>
        <label>Cuenta Bancaria</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNI_Solicitante__c</fullName>
        <description>Formulario 02: DNI Solicitante</description>
        <label>DNI Solicitante</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNI_Usuario__c</fullName>
        <label>DNI Usuario</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departamento__c</fullName>
        <label>Departamento</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion__c</fullName>
        <label>Direccion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>División</label>
        <picklist>
            <picklistValues>
                <fullName>Adorea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residencial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domiciliaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teleasistencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SARDomus</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Email_Solicitante__c</fullName>
        <label>Email Solicitante</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Escalera__c</fullName>
        <label>Escalera</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Especialidad_Medica__c</fullName>
        <label>Especialidad Médica</label>
        <picklist>
            <picklistValues>
                <fullName>Cardiólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cirujano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnostico por Imagen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endocrino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enfermero (DUE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastroenterólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gerontólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ginecólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hematólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infectólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicina de Familia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicina Interna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicina Preventiva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Médico de Família</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microbiólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nefrólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neumólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nutricionista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oftalmólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paliatólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pediatra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psicólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traumatólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgencias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urólogo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fecha_de_nacimiento__c</fullName>
        <label>Fecha de nacimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fuente__c</fullName>
        <label>Fuente</label>
        <picklist>
            <picklistValues>
                <fullName>Consejeros SARquavitae</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consejeros Confide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bancs y Cajas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirección General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presidencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contactos corporativos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profesionales SARquavitae</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profesionales Confide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prensa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webs sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jornadas y eventos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suscritores blogs centros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Hora_de_llamada__c</fullName>
        <label>Hora de llamada</label>
        <picklist>
            <picklistValues>
                <fullName>8 – 9h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 – 12h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 – 14h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 – 16h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 – 19h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19 – 21h</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_Campa_a__c</fullName>
        <label>ID Campaña</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Centro__c</fullName>
        <description>Numero que identifica el centro</description>
        <label>ID Centro</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Servicio__c</fullName>
        <label>ID Servicio</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Idioma_de_contacto__c</fullName>
        <label>Idioma de contacto</label>
        <picklist>
            <picklistValues>
                <fullName>Castellano</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Catalán</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Euskera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inglés</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Jornada_Actual__c</fullName>
        <label>Jornada Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mensaje__c</fullName>
        <label>Mensaje</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Motivo_Consulta__c</fullName>
        <description>¿Que buscas? En el formulario de ¿Te puedo ayduar?&quot;</description>
        <label>Motivo Consulta</label>
        <picklist>
            <picklistValues>
                <fullName>Residencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centro de día</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teleasistencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADOREA viviendas con servicios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Médicos a domicilio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empleo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_encuestar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No encuestar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_quiero_Recibir__c</fullName>
        <label>No quiero Recibir</label>
        <picklist>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Información Comercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jornadas y Eventos</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>No_tiene_telefono__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No tiene teléfono</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nombre_Centro__c</fullName>
        <description>Nombre del centro</description>
        <label>Nombre Centro</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_Familiar__c</fullName>
        <label>Nombre Familiar</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_Solicitante__c</fullName>
        <label>Nombre Solicitante</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_Usuario__c</fullName>
        <label>Nombre Usuario</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumCalle__c</fullName>
        <label>NumCalle</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_formulario__c</fullName>
        <description>Numero de formulario de donde provienen los datos</description>
        <label>Numero de formulario</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pais_Formulario_Web__c</fullName>
        <label>Pais Formulario Web</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pais__c</fullName>
        <label>País</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Piso__c</fullName>
        <label>Piso</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provincia_Usuario__c</fullName>
        <label>Provincia Usuario</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provincia__c</fullName>
        <label>Provincia</label>
        <picklist>
            <picklistValues>
                <fullName>A Coruña</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alacant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Álava</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albacete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Almería</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asturias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ávila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badajoz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barcelona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bizkaia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burgos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cáceres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cádiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cantabria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Castelló</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceuta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ciudad Real</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Córdoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuenca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gipuzkoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Girona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guadalajara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huelva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huesca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illes Balears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaén</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La Rioja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las Palmas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>León</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Puerta__c</fullName>
        <label>Puerta</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsable_contacto__c</fullName>
        <label>Responsable contacto</label>
        <picklist>
            <picklistValues>
                <fullName>Dirección General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presidencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDG Soporte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDG Explotación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDG RRII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDG Finanzas y Jurídico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirección RR.HH.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirección Fundación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirección Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirección Tesorería</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirección Desarrollo Negocios privados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirección Compras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirección Infraestructuras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirección Administración</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirección Comercial</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Secretaria__c</fullName>
        <label>Secretaria</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicio__c</fullName>
        <label>Servicio</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sexo__c</fullName>
        <label>Sexo</label>
        <picklist>
            <picklistValues>
                <fullName>Hombre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mujer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Telefono_Solicitante__c</fullName>
        <label>Telefono Solicitante</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telefono_Usuario__c</fullName>
        <label>Teléfono Usuario</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Titulacion__c</fullName>
        <label>Titulacion</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Habilitado</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Telefono_informado</fullName>
        <active>true</active>
        <errorConditionFormula>No_tiene_telefono__c  =true  &amp;&amp;  (NOT(ISBLANK( Phone )) || NOT(ISBLANK(   MobilePhone )))</errorConditionFormula>
        <errorDisplayField>No_tiene_telefono__c</errorDisplayField>
        <errorMessage>Ya se ha informado un teléfono</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validacion_num_telefono</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Pais__c,&apos;España&apos;)  &amp;&amp; (
((LEN(Phone)&lt;9  ||   NOT(ISNUMBER( Phone ))) &amp;&amp; NOT(ISBLANK(Phone))) 
||
 ((LEN(  MobilePhone )&lt;9  ||   NOT(ISNUMBER(  MobilePhone )))  &amp;&amp;  NOT(ISBLANK( MobilePhone )))

)</errorConditionFormula>
        <errorMessage>El teléfono debe tener un mínimo de 9 valores numéricos</errorMessage>
    </validationRules>
</CustomObject>